<resources>
    <string name="app_name">YourOrderApp</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="login_with_phone">Login with Phone Number</string>
    <string name="font_regular">Mon-Reg.ttf</string>
    <string name="font_bold">Mon-Bold.ttf</string>
    <string name="font_semi_bold">Mon-SemiBold.ttf</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="enter_phone_number">Enter your Phone Number</string>
    <string name="next">Next</string>
    <string name="enter_code">Enter your code</string>
    <string name="submit">Submit</string>
    <string name="did_nt_get_code">Did\'nt get code yet?</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="enter_address">Enter your address</string>
    <string name="street">Street</string>
    <string name="apt_suit_flr">Apt/Suite/Floor/Room</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="action_notifications">Notifications</string>
    <string name="create_delivery_order">Create Delivery Order</string>
    <string name="create_pickup">Create Pickup Order</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="start_ordering_no_data">Seems like you haven\'t ordered yet!.</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="support">Customer Support</string>
    <string name="profile">My Profile</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_manual_order">Quick Manual Order</string>
    <string name="how_want_to_order">How do you want\nto order?</string>
    <string name="browse_store_items">Browse Store Items</string>
    <string name="use_shop_cart">Use shopping cart</string>
    <string name="manual_order">Manual Order</string>
    <string name="add_inst">Additional Instructions</string>
    <string name="add_more_items">Add More Items</string>
    <string name="schedule_pickup">Schedule Pickup</string>
    <string name="send_to_store">Send Order To Store</string>
    <string name="done">Done</string>
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="thanks_for_your_order">Thanks for your Order</string>
    <string name="order_sent">Order Sent Successfully</string>
    <string name="questions">Questions?</string>
    <string name="call_store">Call Store</string>
    <string name="email_store">Email Store</string>
    <string name="enter_delivery_address">Add Delivery Address</string>
    <string name="view_my_orders">View My Order</string>
    <string name="store_assoc_will_call">Store associate will call to schedule\n the delivery</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="plus_taxes">Plus  Taxes</string>
    <string name="my_cart">My cart</string>
    <string name="pay_later">Pay Later - Send Order to Store</string>
    <string name="pay_now">Pay Now</string>
    <string name="finalize_order">Confirm Order ?</string>
    <string name="your_order">Your Order</string>
    <string name="remove">Remove</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="to_pay">To Pay</string>
    <string name="bill_details">Bill Details</string>
    <string name="scd_pickup_time"><![CDATA[Schedule Pickup Time & Date]]></string>
    <string name="scd_pickup">Schedule Pickup</string>
    <string name="choose_address">Delivery address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_new_address">Add Delivery Address</string>
    <string name="enter_your_card_details">Enter your card details</string>
    <string name="your_card_number">Your Card Number</string>
    <string name="name_on_card">Name on card</string>
    <string name="cvv">CVV</string>
    <string name="exp_date">Expiry date</string>
    <string name="finalize_place_order"><![CDATA[Finalize Payment & Place Order]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="my_profile">My profile</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="are_you_sure_logout">Are you sure want to logout?</string>
    <string name="customer_support">Customer Support</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="get_directions">Get directions</string>
    <string name="chat_with">Chat with Store Associate</string>
    <string name="no_internet">"No Internet. Please check your internet connection!!!"</string>
    <string name="google_sign_in_failed">"Google sign in failed with code %d"</string>
    <string name="google_sign_in_successful">Google sign in successful</string>
    <string name="can_not_empty">Can not empty</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="login_successful">Login Successful</string>
    <string name="welcome">Welcome %s</string>
    <string name="no_phone_added">No Phone number added</string>
    <string name="please_enter_otp">Plesae enter otp</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="location_per_required">Location permission required to use the app</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="pick_your_location">Pick your location</string>
    <string name="zip_code_can_not_empty">Zip code can\'t empty</string>
    <string name="please_pick_valid_location">Please pick valid location</string>
    <string name="manage_address">Manage Address</string>
    <string name="manage_addresses">Manage Address</string>
    <string name="edit_address">Edit Delivery Address</string>
    <string name="delete_address">Delete Address</string>
    <string name="delete_address_desc">Are you sure you want to delete?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_address_added">No address found</string>
    <string name="no_products_added">No products added yet</string>
    <string name="no_products_in_category">No products in this category</string>
    <string name="no_products_found">No products found</string>
    <string name="items">%d Items</string>
    <string name="remove_product">Remove Product</string>
    <string name="remove_product_desc">Are you sure want to remove?</string>
    <string name="change_address">Select Address</string>
    <string name="add_address">Add Address</string>
    <string name="cart_is_empty">Your cart is empty</string>
    <string name="no_delivert_address_selected">Please add delivery address</string>
    <string name="products_count">%d Products</string>


    <string name="status_pending">Pending</string>
    <string name="status_confirm">Confirm</string>
    <string name="status_in_process">In Processing</string>
    <string name="status_ready">Ready for pickup</string>
    <string name="status_out_for_del">Out for delivery</string>
    <string name="status_picked_up">Picked up</string>
    <string name="status_delivered">Delivered</string>
    <string name="status_order_cancelled">Order Cancelled</string>
    <string name="card_no_not_valid">Card number is not valid</string>
    <string name="cvv_not_valid">CVV number is not valid</string>
    <string name="card_expiry_not_valid">Card expiry is not valid</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="are_sure_cancel_order">Are you sure want to cancel order?</string>
    <string name="no_orders_found">No orders found</string>
    <string name="no_pick_time_selected">No pick up time selected</string>
    <string name="please_add_atleast_one_product">Please add atleast one product</string>
    <string name="plesae_select_address_to_deliver">Please select address to deliver your order</string>
    <string name="pickup_time_not_valid">Pick up time is not valid</string>
    <string name="unable_to_pick_your_address">Unable to pick your address</string>
    <string name="order_details">Order Details</string>
    <string name="qty">QTY : %s</string>
    <string name="products_list">Products List</string>
    <string name="select_address">Select Address</string>
    <string name="verify_order_texr">Are you sure want to place order?\nOr verify it before proceed.</string>
    <string name="proceed">Proceed</string>
    <string name="verify">Verify</string>
    <string name="reload">Reload</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="semms_you_offline">Seems like your are offline, please check\nyour internet connection</string>
    <string name="no_products_uploaded">Store has not uploaded\nany products yet</string>
    <string name="try_manual_ordering">Please try manual ordering.</string>
    <string name="order_now">Order Now</string>
    <string name="semms_like_you_not_added_address">Seems like you haven\'t added your\ndelivery address yet!</string>
    <string name="no_notifications_found">No Notifications Found</string>
    <string name="you_will_see_it_here">You will see it here once your\norder status changed</string>
    <string name="contact_support">Contact Support</string>
    <string name="clear_all">Clear All</string>
    <string name="please_enter_mobile_no_to_sign">Please enter Mobile\nPhone number to sign in</string>
    <string name="no_delivery_available">Delivery not available in\nyour area</string>
    <string name="you_can_contact_your_team">You can contact our customer support\nteam</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="edit_order">Edit Order</string>
    <string name="items_not_available">Items not available</string>
    <string name="download_invoice">Download Invoice</string>


</resources>
