<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.company.dreamgroceries.home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"></fragment>

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.company.dreamgroceries.home.ui.orders.MyOrdersFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.company.dreamgroceries.home.ui.profile.ProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_support"
        android:name="com.company.dreamgroceries.home.ui.support.SupportFragment"
        android:label="fragment_support"
        tools:layout="@layout/fragment_support" />
</navigation>