<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ThanksFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"></androidx.constraintlayout.widget.Guideline>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideHo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"></androidx.constraintlayout.widget.Guideline>

    <ImageView
        android:id="@+id/ivThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_thanks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideHor" />

    <com.fameget.dreamgroceries.customviews.CFTextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_16"
        android:text="@string/thanks_for_your_order"
        android:textColor="@color/textColor"
        android:textSize="@dimen/txt_22"
        app:fontName="@string/font_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivThanks"></com.fameget.dreamgroceries.customviews.CFTextView>

    <com.fameget.dreamgroceries.customviews.CFTextView
        android:id="@+id/tvOrderSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_4"
        android:text="@string/order_sent"
        android:textColor="@color/textGray"
        android:textSize="@dimen/txt_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvThanks"></com.fameget.dreamgroceries.customviews.CFTextView>

    <com.fameget.dreamgroceries.customviews.CFTextView
        android:id="@+id/tvQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/questions"
        android:textColor="@color/textColor"
        android:textSize="@dimen/txt_20"
        app:layout_constraintBottom_toTopOf="@id/btnCallStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.fameget.dreamgroceries.customviews.CFTextView>

    <View

        android:id="@+id/btnCallStore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_hgt"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/btn_grn_bg"
        app:layout_constraintBottom_toTopOf="@id/btnEmailStore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.fameget.dreamgroceries.customviews.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_store"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_btn"
        app:layout_constraintBottom_toBottomOf="@id/btnCallStore"
        app:layout_constraintEnd_toEndOf="@id/btnCallStore"
        app:layout_constraintStart_toStartOf="@id/btnCallStore"
        app:layout_constraintTop_toTopOf="@id/btnCallStore" />


    <View

        android:id="@+id/btnEmailStore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_hgt"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_24"
        android:background="@drawable/btn_grn_bg"
        app:layout_constraintBottom_toTopOf="@id/tvMyOrders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.fameget.dreamgroceries.customviews.CFTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_store"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_btn"
        app:layout_constraintBottom_toBottomOf="@id/btnEmailStore"
        app:layout_constraintEnd_toEndOf="@id/btnEmailStore"
        app:layout_constraintStart_toStartOf="@id/btnEmailStore"
        app:layout_constraintTop_toTopOf="@id/btnEmailStore" />


    <com.fameget.dreamgroceries.customviews.CFTextView
        android:id="@+id/tvMyOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_24"
        android:text="@string/view_my_orders"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txt_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.fameget.dreamgroceries.customviews.CFTextView>

    <com.fameget.dreamgroceries.customviews.CFTextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_light_green"
        android:gravity="center"
        android:paddingStart="@dimen/dp_24"
        android:paddingTop="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_24"
        android:paddingBottom="@dimen/dp_8"
        android:text="@string/store_assoc_will_call"
        android:textColor="@color/textColor"
        android:textSize="@dimen/txt_12"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/tvQuestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvOrderSent" />



</androidx.constraintlayout.widget.ConstraintLayout>
<!--

-->
